--- a/.gitignore
+++ b/.gitignore
@@ -43,11 +43,10 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 
-# fvm
-
-.fvm/flutter_sdk
-
 # melos
 
 pubspec_overrides.yaml
 pubspec.lock
+
+# FVM Version Cache
+.fvm/
