feat: support Dart 3

--- a/data/datastore/pubspec.yaml
+++ b/data/datastore/pubspec.yaml
@@ -4,28 +4,28 @@ description: datastore package for flutter_memo
 publish_to: 'none'
 
 environment:
-  sdk: '>=2.18.6 <3.0.0'
-  flutter: ">=1.17.0"
+  sdk: '>=3.0.0 <4.0.0'
+  flutter: ">=3.10.0"
 
 dependencies:
   flutter:
     sdk: flutter
   model:
     path: ../../model/
-  sqflite:
-  path:
+  sqflite: '^2.3.2'
+  path: '^1.8.3'
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
   sqflite_common_ffi:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
-flutter:
+# flutter:
 
   # To add assets to your package, add an assets section, like this:
   # assets:
