--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -2,9 +2,8 @@ include: package:flutter_lints/flutter.yaml
 
 analyzer:
   language:
+    strict-casts: true
     strict-raw-types: true
-  strong-mode:
-    implicit-casts: true
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
