--- a/model/pubspec.yaml
+++ b/model/pubspec.yaml
@@ -5,25 +5,25 @@ publish_to: 'none'
 
 environment:
   sdk: '>=2.18.6 <3.0.0'
-  flutter: ">=1.17.0"
+  flutter: ">=3.10.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  freezed_annotation: ^2.2.0
+  freezed_annotation: ^2.4.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
-  build_runner: ^2.3.3
-  freezed: ^2.3.2
+  flutter_lints: ^3.0.1
+  build_runner: ^2.4.9
+  freezed: ^2.5.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
-flutter:
+# flutter:
 
   # To add assets to your package, add an assets section, like this:
   # assets:
