--- a/melos.yaml
+++ b/melos.yaml
@@ -31,7 +31,7 @@ scripts:
 
   build_runner:data:repository:
     run: |
-      flutter pub run build_runner build
+      flutter pub run build_runner build --delete-conflicting-outputs
     exec:
       failFast: true
     packageFilters:
@@ -39,7 +39,7 @@ scripts:
 
   build_runner:model:
     run: |
-      flutter pub run build_runner build
+      flutter pub run build_runner build --delete-conflicting-outputs
     exec:
       failFast: true
     packageFilters:
