--- a/data/repository/pubspec.yaml
+++ b/data/repository/pubspec.yaml
@@ -4,7 +4,7 @@ description: repository package for flutter_memo
 publish_to: 'none'
 
 environment:
-  sdk: '>=2.18.6 <3.0.0'
+  sdk: '>=3.1.0 <4.0.0'
   flutter: ">=3.10.0"
 
 dependencies:
@@ -14,13 +14,16 @@ dependencies:
     path: ../../model/
   datastore:
     path: ../datastore
+  riverpod_annotation: ^2.3.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.1
-  mockito: '^5.4.2'
   build_runner: ^2.4.9
+  riverpod_generator: ^2.3.11
+  riverpod_lint: ^2.3.9
+  flutter_lints: ^3.0.1
+  mockito: '^5.4.3'
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
