--- a/data/datastore/pubspec.yaml
+++ b/data/datastore/pubspec.yaml
@@ -4,7 +4,7 @@ description: datastore package for flutter_memo
 publish_to: 'none'
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: ">=3.1.0 <4.0.0"
   flutter: ">=3.10.0"
 
 dependencies:
