--- a/domain/pubspec.yaml
+++ b/domain/pubspec.yaml
@@ -4,7 +4,8 @@ description: domain package for flutter_memo
 publish_to: 'none'
 
 environment:
-  sdk: '>=2.18.6 <3.0.0'
+  sdk: ">=3.1.0 <4.0.0"
+  flutter: ">=3.10.0"
 
 dependencies:
   flutter:
