--- a/melos.yaml
+++ b/melos.yaml
@@ -9,6 +9,32 @@ packages:
 
 sdkPath: .fvm/flutter_sdk
 
+command:
+  bootstrap:
+    usePubspecOverrides: true
+    environment:
+      sdk: ">=3.1.0 <4.0.0"
+      flutter: ">=3.10.0"
+    dependencies:
+      flutter:
+        sdk: flutter
+      go_router: ^13.1.0
+      flutter_hooks: ^0.20.5
+      collection: ^1.17.2
+      hooks_riverpod: ^2.4.10
+      riverpod_annotation: ^2.3.4
+      freezed_annotation: ^2.4.4
+    dev_dependencies:
+      flutter_test:
+        sdk: flutter
+      build_runner: ^2.4.9
+      riverpod_generator: ^2.3.11
+      riverpod_lint: ^2.3.9
+      flutter_lints: ^3.0.1
+      custom_lint:
+      freezed: ^2.5.2
+      mockito: '^5.4.3'
+
 scripts:
   prepare: melos bs && melos run build_runner:all
 
@@ -35,15 +61,15 @@ scripts:
 
   build_runner:app:
     run: |
-      flutter pub run build_runner build --delete-conflicting-outputs
+      dart run build_runner build --delete-conflicting-outputs
     exec:
       failFast: true
     packageFilters:
       scope: "flutter_memo"
 
   build_runner:domain:
-    run: |
-      flutter pub run build_runner build --delete-conflicting-outputs
+    run:
+      dart run build_runner build --delete-conflicting-outputs
     exec:
       failFast: true
     packageFilters:
@@ -51,7 +77,7 @@ scripts:
 
   build_runner:data:datastore:
     run: |
-      flutter pub run build_runner build --delete-conflicting-outputs
+      dart run build_runner build --delete-conflicting-outputs
     exec:
       failFast: true
     packageFilters:
@@ -59,7 +85,7 @@ scripts:
 
   build_runner:data:repository:
     run: |
-      flutter pub run build_runner build --delete-conflicting-outputs
+      dart run build_runner build --delete-conflicting-outputs
     exec:
       failFast: true
     packageFilters:
@@ -67,7 +93,7 @@ scripts:
 
   build_runner:model:
     run: |
-      flutter pub run build_runner build --delete-conflicting-outputs
+      dart run build_runner build --delete-conflicting-outputs
     exec:
       failFast: true
     packageFilters:
