--- a/data/datastore/pubspec.yaml
+++ b/data/datastore/pubspec.yaml
@@ -23,6 +23,7 @@ dev_dependencies:
   riverpod_generator: ^2.3.11
   riverpod_lint: ^2.3.9
   flutter_lints: ^3.0.1
+  custom_lint:
   sqflite_common_ffi:
 
 # For information on the generic Dart part of this file, see the
