--- a/model/pubspec.yaml
+++ b/model/pubspec.yaml
@@ -17,6 +17,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^3.0.1
   build_runner: ^2.4.9
+  source_gen: ^1.5.0
   freezed: ^2.5.2
 
 # For information on the generic Dart part of this file, see the
