--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
     path: ../data/repository/
   model:
     path: ../model/
-  collection: ^1.17.2
+  collection: ^1.18.0
   flutter_hooks: ^0.20.5
   hooks_riverpod: ^2.4.10
   riverpod_annotation: ^2.3.4
@@ -51,6 +51,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  analyzer: ^6.2.0
   build_runner: ^2.4.9
   riverpod_generator: ^2.3.11
   riverpod_lint: ^2.3.9
