--- a/data/datastore/pubspec.yaml
+++ b/data/datastore/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  analyzer: ^6.2.0
   build_runner: ^2.4.9
   riverpod_generator: ^2.3.11
   riverpod_lint: ^2.3.9
