--- a/model/pubspec.yaml
+++ b/model/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  analyzer: ^6.2.0
   flutter_lints: ^3.0.1
   build_runner: ^2.4.9
   source_gen: ^1.5.0
