--- a/data/repository/pubspec.yaml
+++ b/data/repository/pubspec.yaml
@@ -14,18 +14,18 @@ dependencies:
     path: ../../model/
   datastore:
     path: ../datastore
-  riverpod_annotation: ^2.3.4
+  riverpod_annotation: ^2.3.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  analyzer: ^6.2.0
-  build_runner: ^2.4.9
-  riverpod_generator: ^2.3.11
-  riverpod_lint: ^2.3.9
+  analyzer: ^6.5.0
+  build_runner: ^2.4.12
+  riverpod_generator: ^2.4.3
+  riverpod_lint: ^2.3.13
   flutter_lints: ^3.0.1
   custom_lint:
-  mockito: '^5.4.3'
+  mockito: ^5.4.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
