--- a/domain/pubspec.yaml
+++ b/domain/pubspec.yaml
@@ -21,10 +21,12 @@ dev_dependencies:
     sdk: flutter
   analyzer: ^6.5.0
   build_runner: ^2.4.12
+  custom_lint:
+  flutter_lints: ^3.0.1
+  mockito: ^5.4.4
+  riverpod: ^2.5.1
   riverpod_generator: ^2.4.3
   riverpod_lint: ^2.3.13
-  flutter_lints: ^3.0.1
-  custom_lint:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
